# ChangeLog for net-misc/miniupnpd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/miniupnpd/ChangeLog,v 1.16 2011/01/21 16:09:48 gurligebis Exp $

*miniupnpd-1.5 (21 Jan 2011)

  21 Jan 2011; <gurligebis@gentoo.org> -miniupnpd-1.5_pre20100921.ebuild,
  +miniupnpd-1.5.ebuild:
  Bumping to 1.5

*miniupnpd-1.5_pre20100921 (26 Sep 2010)

  26 Sep 2010; <gurligebis@gentoo.org> -miniupnpd-1.5_pre20091222.ebuild,
  +miniupnpd-1.5_pre20100921.ebuild:
  Bumping to 1.5_pre20100921 and fixing bug 338163.

  02 Mar 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  miniupnpd-1.5_pre20091222.ebuild:
  Updating dependencies, fixing bug #307461

*miniupnpd-1.5_pre20091222 (28 Feb 2010)

  28 Feb 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -files/miniupnpd-1.3-conf.d, -files/miniupnpd-1.3-init.d,
  -miniupnpd-1.4_pre20090921.ebuild, +miniupnpd-1.5_pre20091222.ebuild,
  +files/miniupnpd-1.5-iptcrdr.diff, +files/miniupnpd-conf.d,
  +files/miniupnpd-init.d:
  Bumping to version 20091222 and fixing bug #287644

  05 Feb 2010; Ulrich Mueller <ulm@gentoo.org>
  miniupnpd-1.4_pre20090921.ebuild:
  Fix LICENSE, bug 301123.

*miniupnpd-1.4_pre20090921 (21 Sep 2009)

  21 Sep 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -miniupnpd-1.3-r1.ebuild, +miniupnpd-1.4_pre20090921.ebuild,
  -files/miniupnpd-20090516.diff:
  Bumping to 1.4_pre20090921, removing old version, since it contains a 
  critical handle starvation bug.

  22 May 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  +files/miniupnpd-20090516.diff:
  Fixing patch

*miniupnpd-1.3-r1 (21 May 2009)

  21 May 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -miniupnpd-1.3.ebuild, +miniupnpd-1.3-r1.ebuild,
  +files/miniupnpd-20090516.diff:
  Applying changes from 20090516, fixing a buffer overflow bug.

  13 May 2009; Samuli Suominen <ssuominen@gentoo.org> miniupnpd-1.3.ebuild: